Enable CSRF protection and update application properties

--- a/solution/expenses/src/main/resources/application.properties
+++ b/solution/expenses/src/main/resources/application.properties
@@ -3,12 +3,13 @@ server.address = <hostname>
 server.port = <port>
 # Enable error stacktrace to be included in Thymeleaf
 server.error.include-stacktrace = always
-# server.allowedOrigins = http://www.engagetech.com,http://localhost:8080
+# Configure all allowed origins separated with commas
+server.allowedOrigins = http://www.engagetech.com,http://localhost:8080
 
 ## Configure application endpoints
 ## Example: <api> as app and <endpoint> as expenses would give this route /app/expenses
-application.api.path = /app
-application.api.expenses.endpoint = /expenses
+application.api.path = /<app>
+application.api.expenses.endpoint = /<endpoint>
 
 ## Configure public API for currency conversion (REST API calls)
 application.currency.converter.api.path = http://data.fixer.io/api/latest
